--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,14 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: 'Montserrat';
+  src: url('./fonts/Montserrat-Regular.ttf') format('truetype');
+  /* Подставьте правильные пути к файлам шрифтов, если они отличаются */
+}
+
 body {
   background: var(--tg-theme-bg-color);
   color: var(--tg-theme-text-color);
+  font-family: 'Montserrat', sans-serif;
 }
