--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,11 +1,84 @@
 .header { 
-    width: 100%;
+    /* width: 100%;
     height: 50px;
     display: flex;
     align-items: center;
-    padding: 0 20px;
+    padding: 0 20px; */
+    background-color: #1c1c3b;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
 }
 
-.username {
+.header-content {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+  }
+
+.profile {
+    display: flex;
+    align-items: center;
+  }
+
+  .profile-image {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+  }
+  
+  .profile-info {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .profile-name {
+    font-size: 16px;
+    font-weight: bold;
+  }
+  
+  .profile-id {
+    font-size: 12px;
+    color: #ccc;
+  }
+  
+  .balance {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-left: auto;
-}
+    margin-right: 20px;
+  }
+  
+  .balance-text {
+    font-size: 14px;
+    font-weight: bold;
+  }
+  
+  .balance-amount {
+    font-size: 20px;
+    font-weight: bold;
+  }
+  
+  .recharge-button {
+    background-color: #00c6a2;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+  }
+  
+  .recharge-button:hover {
+    background-color: #00a28a;
+  }
+
+/* .username {
+    margin-left: auto;
+} */
