--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  /* background: var(--tg-theme-bg-color);
-  color: var(--tg-theme-text-color); */
+  background: var(--tg-theme-bg-color);
+  color: var(--tg-theme-text-color);
   font-family: 'Montserrat', sans-serif;
 }
