--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -25,12 +25,12 @@
 
   }
 
-  /* .profile-image {
+  .profile-image {
     width: 50px;
     height: 50px;
     border-radius: 50%;
     margin-right: 10px;
-  } */
+  }
   
   .profile-info {
     display: flex;
