--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: space-between;
     color: white;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat';
 }
 
 .header-content {
