--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,16 +1,18 @@
-.header { 
+.header {
     width: 100%;
-    background: url('./img/header.png') no-repeat center center, #1c1c3b;
+    background: url('./img/header.png') no-repeat center center #1c1c3b;
     background-size: cover;
     padding: 10px 15px;
     display: flex;
     justify-content: space-between;
     color: white;
     font-family: 'Montserrat';
-    position: fixed;
+    position: sticky; /* изменено на sticky */
     top: 0;
     left: 0;
+    z-index: 1000; /* установлен z-index */
 }
+
 
 .header-content {
     display: flex;
