--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,7 +2,7 @@
     width: 100%;
     background: url('./img/header.png') no-repeat center center #1c1c3b;
     background-size: cover;
-    padding: 10px 15px;
+    padding: 50px 15px 10px 15px;
     display: flex;
     justify-content: space-between;
     color: white;
