--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ body {
   background-size: cover;
 }
 
-.LoadingTexth1 {
+.LoadingTextspan1 {
   font-size: 24px;
   /* font-weight: bold; Жирный шрифт */
   background: linear-gradient(to right, #ffffff, #bbbbbb, #ffffff);
@@ -35,11 +35,11 @@ body {
   background-clip: text; /* Применяем градиент только к тексту */
   background-size: 400% 400%;
   color: transparent; /* Делаем текст прозрачным */
-  animation: gradientAnimation 1 s linear infinite; /* Добавляем анимацию */
+  animation: gradientAnimation 1s linear infinite; /* Добавляем анимацию */
   text-align: center; /* выравнивание текста по центру */
   margin: 5px 0; /* настройка внешних отступов, чтобы создать пространство между элементами */
 }
-.LoadingTextspan {
+.LoadingTextspan2 {
   font-size: 12px;
   /* font-weight: bold; Жирный шрифт */
   background: linear-gradient(to right, #ffffff, #999999, #ffffff);
@@ -47,7 +47,7 @@ body {
   background-clip: text; /* Применяем градиент только к тексту */
   background-size: 400% 400%;
   color: transparent; /* Делаем текст прозрачным */
-  animation: gradientAnimation 500ms linear infinite; /* Добавляем анимацию */
+  animation: gradientAnimation 1s linear infinite; /* Добавляем анимацию */
   text-align: center; /* выравнивание текста по центру */
   margin: 5px 0; /* настройка внешних отступов, чтобы создать пространство между элементами */
 }
