--- a/src/App.css
+++ b/src/App.css
@@ -29,13 +29,13 @@ body {
 
 .LoadingTextspan1 {
   font-size: 24px;
-  /* font-weight: bold; Жирный шрифт */
+  font-weight: bold;
   background: linear-gradient(to right, #ffffff, #bbbbbb, #ffffff);
   -webkit-background-clip: text; /* Применяем градиент только к тексту для WebKit (Chrome, Safari) */
   background-clip: text; /* Применяем градиент только к тексту */
   background-size: 400% 400%;
   color: transparent; /* Делаем текст прозрачным */
-  animation: gradientAnimation 1s linear infinite; /* Добавляем анимацию */
+  animation: gradientAnimation 3s linear infinite; /* Добавляем анимацию */
   text-align: center; /* выравнивание текста по центру */
   margin: 5px 0; /* настройка внешних отступов, чтобы создать пространство между элементами */
 }
@@ -47,7 +47,7 @@ body {
   background-clip: text; /* Применяем градиент только к тексту */
   background-size: 400% 400%;
   color: transparent; /* Делаем текст прозрачным */
-  animation: gradientAnimation 1s linear infinite; /* Добавляем анимацию */
+  animation: gradientAnimation 3s linear infinite; /* Добавляем анимацию */
   text-align: center; /* выравнивание текста по центру */
   margin: 5px 0; /* настройка внешних отступов, чтобы создать пространство между элементами */
 }
