--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ body {
   background: linear-gradient(to right, #ffffff, #bbbbbb);
   -webkit-background-clip: text; /* Применяем градиент только к тексту для WebKit (Chrome, Safari) */
   background-clip: text; /* Применяем градиент только к тексту */
-  background-size: 400% 400%;
+  background-size: 100% 100%;
   color: transparent; /* Делаем текст прозрачным */
   animation: gradientAnimation 1s linear infinite; /* Добавляем анимацию */
   text-align: center; /* выравнивание текста по центру */
@@ -41,7 +41,7 @@ body {
 }
 .LoadingTextspan2 {
   font-size: 12px;
-  /* font-weight: bold; Жирный шрифт */
+  font-weight: bold;
   background: linear-gradient(to right, #ffffff, #999999);
   -webkit-background-clip: text; /* Применяем градиент только к тексту для WebKit (Chrome, Safari) */
   background-clip: text; /* Применяем градиент только к тексту */
